# compressed-vec

./: .gitignore  Cargo.toml  README.md  rust-toolchain  rustfmt.toml  vector_format.md
.circleci/: config.yml
benches/: bench.rs
examples/: 2d_delta_bench.rs
proptest-regressions/: nibblepack_simd.txt  nibblepacking.txt
src/: byteutils.rs  error.rs  filter.rs  histogram.rs  lib.rs  nibblepack_simd.rs  nibblepacking.rs  section.rs  sink.rs  vector.rs
