[package]
name = "compressed_vec"
version = "0.1.0"
authors = ["Evan Chan <velvia@gmail.com>"]
edition = "2018"

[dependencies]
memoffset = "0.5"
plain = "0.2.3"
scroll = { version = "0.10", features = ["derive"] }
arrayref = "*"
enum_dispatch = "0.2"
num = "*"

# TODO: put this behind a feature flag
packed_simd = "0.3"

[dev-dependencies]
criterion = "0.3"
proptest = "0.9.1"

[[bench]]
name = "bench"
harness = false

[profile.bench]
opt-level = 3
debug = true

[profile.release]
debug = true

[lib]
# NOTE: Type "cdylib" is for JVM integration;  "lib" is needed for benchmarks
crate-type = ["staticlib", "cdylib", "lib"]
