[package]
name = "compressed_vec"
version = "0.1.0"
authors = ["Evan Chan <velvia@gmail.com>"]
edition = "2018"
description = "Floating point and integer compressed vector library, SIMD-enabled for fast processing/iteration over compressed representations."
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/velvia/compressed-vec"
categories = ["compression", "data-structures", "encoding"]
keywords = ["compression", "data-structures", "simd", "columnar", "float"]

[dependencies]
memoffset = "0.6.3"
plain = "0.2.3"
scroll = { version = "0.10", features = ["derive"] }
arrayref = "0.3"
enum_dispatch = "0.3.5"
num = "0.3"
smallvec = "1.4"
num_enum = "0.5"

# TODO: put this behind a feature flag
packed_simd = { version = "0.3.9", features = ["into_bits"] }

[dev-dependencies]
criterion = "0.3"
proptest = "0.9.1"

[[bench]]
name = "bench"
harness = false

[profile.bench]
opt-level = 3
debug = true

[profile.release]
debug = true

[lib]
# NOTE: Type "cdylib" is for JVM integration;  "lib" is needed for benchmarks
crate-type = ["staticlib", "cdylib", "lib"]
